# VKR

./: .env  .gitignore  docker-compose.yml  request.json
go-server/: Dockerfile  README.md  go.mod  main.go
go-server/cmd/server/: main.go
go-server/internal/config/: config.go
go-server/internal/db/: pool.go
go-server/internal/dto/: dto.go
go-server/internal/model/: types.go
go-server/internal/protocol/: protocol.go
go-server/internal/repository/: repository.go
go-server/internal/server/: server.go
postgres/data/: postmaster.pid
postgres/data/base/1/: 2619  2696  2840  2841  pg_internal.init
postgres/data/base/16384/: 1247  1249  1255  1255_fsm  1255_vm  1259  1259_fsm  16385  16386  16391  16393  16395  16397  16399  16408  16409  16416  16417  16427  16434  16449  16456  16465  16467  16477  16479  16481  16482  16491  16493  16507  16514  16515  16519  16528  16529  16531  16556  16559  (+51 more)
postgres/data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
postgres/init/: 01_schema.sql
qt-app/qt-app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  tcpclient.cpp  tcpclient.h
qt-app/qt-app/src/: main.cpp
qt-app/qt-app/src/common/: api_defs.h
qt-app/qt-app/src/models/: lookup_store.cpp  lookup_store.h
qt-app/qt-app/src/net/: tcpjsonclient.cpp  tcpjsonclient.h
qt-app/qt-app/src/utils/: exporter.cpp  exporter.h
qt-app/qt-app/src/widgets/: generic_table_page.cpp  generic_table_page.h  login_dialog.cpp  login_dialog.h  record_editor_dialog.cpp  record_editor_dialog.h  task_selection_window.cpp  task_selection_window.h  task_workspace_window.cpp  task_workspace_window.h
(+3 files in other folders)
